--- a/app/views/data/_cancer_types.erb
+++ b/app/views/data/_cancer_types.erb
@@ -1,6 +1,6 @@
-<div class="l-content wrapper">
-  <div class="row collapse">
-    <div class="column small-12 medium-6">
+<div class="row collapse">
+  <div class="column small-12 medium-4">
+    <div class="c-card -ranking">
       <div id="incidenceRanking" class="c-ranking">
         <div class="c-spinner -start">
           <div class="spinner-box">
@@ -9,8 +9,10 @@
         </div>
       </div>
     </div>
-    <div class="column small-12 medium-6">
-      <div id="mortalityRanking" class="c-ranking">        
+  </div>
+  <div class="column small-12 medium-4">
+    <div class="c-card -ranking">
+      <div id="mortalityRanking" class="c-ranking">
         <div class="c-spinner -start">
           <div class="spinner-box">
             <div class="icon"></div>
@@ -19,5 +21,15 @@
       </div>
     </div>
   </div>
-
+  <div class="column small-12 medium-4">
+    <div class="c-card -ranking">
+      <div id="survivorsRanking" class="c-ranking">
+        <div class="c-spinner -start">
+          <div class="spinner-box">
+            <div class="icon"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
