--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="row collapse">
       <div class="column small-6 align-middle">
         <%= link_to root_path, id: 'logo' do %>
-          <%= image_tag 'global-oncology-logo.png' %>
+          <%= image_tag 'global-oncology-logo.svg' %>
         <% end %>
       </div>
       <div class="column small-6 align-middle">
