--- a/app/views/user_mailer/user_relation_email.html.erb
+++ b/app/views/user_mailer/user_relation_email.html.erb
@@ -4,7 +4,7 @@
 
 <p>
   <% if @action.include?('request') %>
-    Your relation request to <%= @relation_name %> is being revised, please, check your dashboard for updates.
+    Your relation request to <%= @relation_name %> is being reviewed, please, check your dashboard for updates.
   <% else %>
     Your relation to <%= @relation_name %> was <%= @action %>.
   <% end %>
