--- a/app/views/cancer_types/_desktop_show_intro.html.erb
+++ b/app/views/cancer_types/_desktop_show_intro.html.erb
@@ -16,6 +16,7 @@
               <th><%= t 'projects' %></th>
               <th><%= t 'people' %></th>
               <th><%= t 'organizations' %></th>
+              <th><%= t 'posts' %></th>
             </tr>
           </thead>
           <tbody>
@@ -23,6 +24,7 @@
               <td><%= @projects.size %></td>
               <td><%= @people.size %></td>
               <td><%= @cancer_type.organizations_count %></td>
+              <td><%= @posts.size %></td>
             </tr>
           </tbody>
         </table>
