--- a/app/views/cancer_types/_mobile_show_intro.html.erb
+++ b/app/views/cancer_types/_mobile_show_intro.html.erb
@@ -20,8 +20,12 @@
           <span class="amount"><%= @people.size %></span>
         </div>
         <div class="column small-12">
-          <h3>organizations</h3>
+          <h3>Organizations</h3>
           <span class="amount"><%= @cancer_type.organizations_count %></span>
+        </div>
+        <div class="column small-12">
+          <h3>Posts</h3>
+          <span class="amount"><%= @posts.size %></span>
         </div>
       </div>
     </div>
