--- a/app/views/countries/_desktop_show_intro.html.erb
+++ b/app/views/countries/_desktop_show_intro.html.erb
@@ -17,6 +17,7 @@
               <th><%= t 'people' %></th>
               <th><%= t 'events' %></th>
               <th><%= t 'organizations' %></th>
+              <th><%= t 'posts' %></th>
             </tr>
           </thead>
           <tbody>
@@ -25,6 +26,7 @@
               <td><%= @people.size %></td>
               <td><%= @events.size %></td>
               <td><%= @country.organizations_count %></td>
+              <td><%= @posts.size %></td>
             </tr>
           </tbody>
         </table>
