--- a/app/views/organizations/_desktop_show_intro.html.erb
+++ b/app/views/organizations/_desktop_show_intro.html.erb
@@ -29,12 +29,14 @@
             <tr>
               <th><%= t 'projects' %></th>
               <th><%= t 'people' %></th>
+              <th><%= t 'posts' %></th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td><%= @projects.size %></td>
               <td><%= @people.size %></td>
+              <td><%= @posts.size %></td>
             </tr>
           </tbody>
         </table>
