--- a/app/views/organizations/_mobile_show_intro.html.erb
+++ b/app/views/organizations/_mobile_show_intro.html.erb
@@ -33,6 +33,10 @@
           <h3>People</h3>
           <span class="amount"><%= @people.size %></span>
         </div>
+        <div class="column small-12">
+          <h3>Posts</h3>
+          <span class="amount"><%= @posts.size %></span>
+        </div>
       </div>
     </div>
   </div>
