--- a/app/views/countries/_mobile_show_intro.html.erb
+++ b/app/views/countries/_mobile_show_intro.html.erb
@@ -27,6 +27,10 @@
           <h3>Organizations</h3>
           <span class="amount"><%= @country.organizations_count %></span>
         </div>
+        <div class="column small-12">
+          <h3>Posts</h3>
+          <span class="amount"><%= @country.size %></span>
+        </div>
       </div>
     </div>
   </div>
