--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -30,5 +30,9 @@
 </section>
 
 <div class="l-grid" id="content">
-  <%= render 'projects/list', items: @items, more: @more %>
+  <% if @current_type == 'posts' %>
+    <%= render 'posts/list', items: @items, more: @more %>
+  <% else %>
+    <%= render 'projects/list', items: @items, more: @more %>
+  <% end %>
 </div>
