--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <h3 class="c-title">Funding Source</h3>
+      <h3 class="c-title">User Acknowledgement</h3>
       <div class="row">
         <div class="column small-12">
           <p>Submitted information will be verified by the GO Map team to ensure data quality, and may be standardized and/or formatted for consistency before it is published. Checking this box acknowledges that you agree to share this information for public display on the GO Map.</p>
