Filter bar: working

--- a/app/views/map/_desktop_index.html.erb
+++ b/app/views/map/_desktop_index.html.erb
@@ -37,6 +37,9 @@
   </div>
 
   <div class="l-app-bottombar">
+    <div id="filterBarView" class="c-filter-bar">
+
+    </div>
     <div id="counters">
       <%= render 'map/counters' %>
     </div>
