User profile edit general placeholders

--- a/app/views/users/_desktop_show_intro.html.erb
+++ b/app/views/users/_desktop_show_intro.html.erb
@@ -52,7 +52,7 @@
               <% end %>
               <% if not_blank?(user.linkedin_account) %>
                 <li>
-                  <a href="https://www.linkedin.com/in/<%= user.linkedin_account %>" class="-clickable -hv" target="_blank">
+                  <a href="<%= user.linkedin_account %>" class="-clickable -hv" target="_blank">
                     Linkedin
                   </a>
                 </li>
