--- a/app/views/map/_desktop_index.html.erb
+++ b/app/views/map/_desktop_index.html.erb
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <div class="row collapse">
         <div class="column small-12 medium-6">
-          <ul class="c-tabnav" id="dataTabNav">
+          <ul class="c-tabnav -no-gradient" id="dataTabNav">
              <% @filters.each do |filter| %>
               <li class="tabnav-item">
                 <%= link_to t(filter),
