--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,12 +38,13 @@
   <div class="form-row row">
     <div class="column small-12 medium-5 medium-offset-1">
       <h4 class="c-title">Twitter</h4>
-      <%= f.input :twitter_account, placeholder: "User name", label: false %>
+      <%= f.input :twitter_account, placeholder: "username", label: false %>
+      <p class="hint">Do not include '@'</p>
     </div>
 
     <div class="column small-12 medium-5">
       <h4 class="c-title">Linkedin</h4>
-      <%= f.input :linkedin_account, placeholder: "Account url", label: false %>
+      <%= f.input :linkedin_account, placeholder: "https://es.linkedin.com/in/name-lastname-439bab36", label: false %>
     </div>
   </div>
 
