--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -4,8 +4,8 @@
   <div class="wrapper">
     <div class="row">
       <div class="column small-12 medium-9">
-        <h1>About GCPM 2.0</h1>
-        <p>The Global Cancer (GO) Map is an interactive online tool and public resource for the global cancer community. Its purpose is to help visitors initiate partnerships, make informed decisions, and develop collaborations in cancer control.</p>
+        <h1>About The Global Oncology Map</h1>
+        <p>The Global Oncology (GO) Map is an interactive online tool and public resource for the global cancer community. Its purpose is to help visitors initiate partnerships, make informed decisions, and develop collaborations in cancer control.</p>
       </div>
     </div>
   </div>
@@ -15,7 +15,7 @@
   <div class="wrapper">
     <div class="row">
       <div class="column small-12 medium-9">
-        <h2>What a user can do through the GCPM</h2>
+        <h2>What a user can do through The GO Map</h2>
       </div>
     </div>
     <div class="row">
