--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,6 +11,12 @@
           <ul>
             <%= render "shared/nav" %>
             <% if user_signed_in? %>
+              <li id="notifications">
+                <button class="c-dropdown js-action-notifications">
+                  <svg class="c-icon -medium -primary"><use xlink:href="#icon-plus"></use></svg>
+                  <div class="dropdown-content"></div>
+                </button>
+              </li>
               <li class="js-user-menu <%= active_page?(user_session_path) ? '-active' : '' %>">
                 <button class="user-btn">
                   <div class="c-avatar" style="background-image: url(<%= current_user.avatar_url(:thumb) %>)"></div>
