--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,7 +14,16 @@
               <li id="notifications">
                 <button class="c-dropdown js-action-notifications">
                   <svg class="c-icon -medium -primary"><use xlink:href="#icon-plus"></use></svg>
-                  <div class="dropdown-content"></div>
+                  <% if current_user.notifications_count > 0 %>
+                    <div class="c-badge -relative messages-badge <%= current_user.notifications_count %>"><%= current_user.notifications_count %></div>
+                  <% end %>
+                  <div class="dropdown-content notifications">
+                    <% if @notifications.empty? %>
+                      <p>Empty<p>
+                    <% else %>
+                      <%= render @notifications %>
+                    <% end %>
+                  </div>
                 </button>
               </li>
               <li class="js-user-menu <%= active_page?(user_session_path) ? '-active' : '' %>">
