Dropdown still open when click inside

--- a/app/assets/stylesheets/components/badge.scss
+++ b/app/assets/stylesheets/components/badge.scss
@@ -21,6 +21,11 @@
     display: inline-flex;
   }
 
+  &.-notifications {
+    top: 16px;
+    right: 0;
+  }
+
   &.-hidden {
     display: none;
   }
