--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,13 +13,15 @@
             <% if user_signed_in? %>
               <li id="notifications">
                 <button class="c-dropdown js-action-notifications">
-                  <svg class="c-icon -medium -primary"><use xlink:href="#icon-plus"></use></svg>
+                  <svg class="c-icon -medium -primary"><use xlink:href="#icon-bell"></use></svg>
                   <% if current_user.notifications_count > 0 %>
-                    <div class="c-badge -relative messages-badge <%= current_user.notifications_count %>"><%= current_user.notifications_count %></div>
+                    <div class="c-badge -notifications messages-badge <%= current_user.notifications_count %>"><%= current_user.notifications_count %></div>
                   <% end %>
                   <div class="dropdown-content notifications">
                     <% if @notifications.empty? %>
-                      <p>Empty<p>
+                      <ul class="list">
+                        <li>Empty</li>
+                      </ul>
                     <% else %>
                       <%= render @notifications %>
                     <% end %>
