--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,5 +1,5 @@
 <ul class="list">
-  <li>
+  <li class="">
     <p class="group">
       <strong><%= notification.notificable_group %></strong>
       <span class="time"><%= notification.timestamp %></span>
