--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,9 +1,12 @@
-<ul class="list">
-  <li class="">
+<li class="">
+  <%= link_to notification do %>
     <p class="group">
       <strong><%= notification.notificable_group %></strong>
       <span class="time"><%= notification.timestamp %></span>
     </p>
     <p><%= notification.notificable_title %></p>
-  </li>
-</ul>
+  <% end %>
+</li>
+<li class="-btn js-action-delete">
+  <%= link_to 'Delete all', mark_all_as_read_notifications_path, method: :put %>
+</li>
