--- a/app/assets/javascripts/views/notifications_view.js.erb
+++ b/app/assets/javascripts/views/notifications_view.js.erb
@@ -47,7 +47,7 @@
     },
 
     refresh: function() {
-      this.$content.html('<ul class="list -filled"><li class="-empty">Empty</li></ul>');
+      this.$content.html('<ul class="list"><li class="-empty">No notifications</li></ul>');
       this.$badge.hide();
     }
 
