--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,7 +20,7 @@
                   <div class="dropdown-content notifications">
                     <% if @notifications.empty? %>
                       <ul class="list">
-                        <li class="-empty">Empty</li>
+                        <li class="-empty">No notifications</li>
                       </ul>
                     <% else %>
                       <div class="container">
