--- a/app/assets/stylesheets/components/_menu_mobile.scss
+++ b/app/assets/stylesheets/components/_menu_mobile.scss
@@ -21,9 +21,41 @@
 
     & * { display: inherit; }
     & .back { display: flex; }
+    & .notifications a {
+      display: flex;
+      justify-content: center;
+    }
 
     .icon-close {
       display: initial;
+    }
+  }
+
+  .notifications {
+    ul {
+      overflow: auto;
+      height: calc(100vh - 120px);
+    }
+
+    ul a {
+      flex-flow: column;
+      justify-content: center;
+      font-size: 16px;
+      padding-left: $base-space;
+      color: $base-font-color;
+    }
+
+    .time {
+      display: inline-block;
+      margin-left: 7px;
+    }
+
+    p {
+      margin: 0;
+    }
+
+    .c-btn {
+      text-align: center;
     }
   }
 
@@ -71,7 +103,7 @@
 
 
     li {
-      a {
+      a, .btn {
         display: inline-block;
         width: 100%;
         padding: 11px 0;
