--- a/app/views/shared/_menu_mobile.html.erb
+++ b/app/views/shared/_menu_mobile.html.erb
@@ -14,6 +14,18 @@
 
   <ul class="menu-content -default">
     <%= render "shared/nav" %>
+
+    <% if user_signed_in? %>
+      <li id="notifications">
+        <p class="btn js-mobile-notifications">
+          <span>Notifications
+          </span>
+          <% if current_user.notifications_count > 0 %>
+            <span class="c-badge -relative messages-badge <%= current_user.notifications_count %>"><%= current_user.notifications_count %></span>
+          <% end %>
+        </p>
+      </li>
+    <% end %>
   </ul>
 
   <% if user_signed_in? %>
@@ -27,16 +39,16 @@
   <% end %>
 
 
-<!-- User menu content -->
   <% if user_signed_in? %>
-    <div class="back js-mobile-user-menu menu-content -hidden">
+    <!-- User menu content -->
+    <div class="back js-mobile-user-menu menu-content user-actions -hidden">
       <svg class="c-icon icon-arrow -medium -primary">
         <use xlink:href="#icon-arrow"></use>
       </svg>
       Back
     </div>
 
-    <div class="menu-content -hidden">
+    <div class="user-actions menu-content -hidden">
       <ul>
         <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
           <%= link_to (t 'network'), user_path(:data => 'network', :id => current_user.id) %>
@@ -64,6 +76,31 @@
         <%= link_to (t 'edit_profile'), edit_user_path(current_user.id) %>
       </button>
     </div>
+
+
+  <!-- Notifications -->
+    <div class="back js-mobile-notifications menu-content notifications -hidden">
+      <svg class="c-icon icon-arrow -medium -primary">
+        <use xlink:href="#icon-arrow"></use>
+      </svg>
+      Back
+    </div>
+
+    <% if @notifications.empty? %>
+      <ul class="list menu-content notifications -hidden">
+        <li class="-empty">No notifications</li>
+      </ul>
+    <% else %>
+      <div class="container  menu-content notifications -hidden">
+        <ul class="list -filled">
+          <%= render @notifications %>
+        </ul>
+        <li>
+        <button class="c-btn -primary -inverse button">
+          <%= link_to 'Delete all', mark_all_as_read_notifications_path, method: :put %>
+        </button>
+      </div>
+    <% end %>
   <% end %>
 
 </div>
