--- a/app/views/user_mailer/user_relation_email.text.erb
+++ b/app/views/user_mailer/user_relation_email.text.erb
@@ -2,5 +2,5 @@ Dear <%= @name_or_email %>,<%= "\n" %>
 <% if @action.include?('request') %>
   Your relation request to <%= @relation_name %> is being reviewed, please, check your dashboard for updates.
 <% else %>
-  Your relation to <%= @relation_name %> was <%= @action %>.
+  Your request for <%= @relation_name %> has been <%= @action %>.
 <% end %>
