--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -37,8 +37,8 @@
           <div>
             <h2><%= link_to e.name, investigator_path(e.slug_or_id) %></h2>
             <% e.organizations.each do |o|%>
-              <h3><%= link_to o.name, organization_path(o.slug) %></h3>
-              <h3><%= o.addresses.map{|a| [a.city, a.country_name]}.uniq.join(', ') %></h3>
+              <h3><%= link_to o.try(:name), organization_path(o.slug_or_id) %></h3>
+              <h3><%= o.addresses.map{|a| [a.try(:city), a.try(:country_name)]}.uniq.join(', ') %></h3>
             <% end %>
 
             <% if e.user.present? && is_owner?(@user, current_user) && !browser.device.mobile? %>
