Hide address options when the event is online

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -121,7 +121,8 @@ label {
 .hiddeable {
   visibility: none;
   position: absolute;
-  top: -1000px;
+  top: -10000000000px;
+  transition: all .3s $easeOutCubic;
 }
 
 .required {
