--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -98,6 +98,7 @@
         <div class="column small-12 medium-5">
           <h4 class="c-title">City</h4>
           <%= f.input :city, label: false %>
+          <p class="required">* Required field</p>
         </div>
       </div>
 
