city field added to new org form

--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -19,6 +19,9 @@
     <div class="column small-12 medium-6">
       <div id="organizationcountry" class="c-select"></div>
     </div>
+    <div class="column small-12 medium-6">
+      <div id="organizationcity" class="c-select"></div>
+    </div>
   </div>
 
   <div class="row">
