--- a/app/assets/javascripts/templates/users_list.hbs
+++ b/app/assets/javascripts/templates/users_list.hbs
@@ -3,8 +3,14 @@
   {{#each items as |item|}}
     <li class="list-item">
       <a href="/network/{{item.id}}">
-        <div class="c-avatar -small -ph" style="background-image: url({{item.photo}})">
-        </div>
+        {{#if item.photo}}
+          <div class="c-avatar -small -no-bg" style="background-image: url({{item.photo}})"></div>
+        {{else}}
+          <div class="c-avatar -small">
+            <svg class="c-icon -inverse -av-small icon-user"><use xlink:href="#icon-user"></use></svg>
+          </div>
+        {{/if}}
+
         <span>{{item.name}}</span>
       </a>
     </li>
