--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -54,12 +54,17 @@
           <div class="column small-12 medium-4">
             <div class="c-card -person">
               <div class="icons">
-                <div class="c-avatar -ph -mg-bt"
-                     style="<% if featured.user.present? %>
-                              background-image: url(<%= featured.user.avatar_url(:thumb) %>)
-                            <% end %>">
-                </div>
+                <% if featured.user.present? && featured.user.avatar.present? %>
+                  <div class="c-avatar -ph -mg-bt"
+                     style="background-image: url(<%= featured.user.avatar_url(:thumb) %>)">
+                  </div>
+                <% else %>
+                  <div class="c-avatar -ph -mg-bt">
+                    <%= render 'shared/placeholder', person: featured, size: '-av-normal' %>
+                  </div>
+                <% end %>
               </div>
+
               <div>
                 <h2><%= link_to featured.name, investigator_path(featured.slug_or_id) %></h2>
                 <% featured.organizations.each do |o|%>
