--- a/app/views/investigators/_list.html.erb
+++ b/app/views/investigators/_list.html.erb
@@ -4,11 +4,17 @@
       <div class="column small-12 medium-4">
         <div class="c-card -person">
           <div class="icons">
-            <div class="c-avatar -ph<% if !browser.device.mobile? %> -mg-bt<% end %>"
-                 style="<% if e.user.present? %>
+            <% if e.user.present? && e.user.avatar.present? %>
+              <div class="c-avatar -ph<% if !browser.device.mobile? %> -mg-bt<% end %>"
+                   style="<% if e.user.present? %>
                           background-image: url(<%= e.user.avatar_url(:thumb) %>)
                         <% end %>">
-            </div>
+              </div>
+            <% else %>
+              <div class="c-avatar -ph<% if !browser.device.mobile? %> -mg-bt<% end %>">
+                <%= render 'shared/placeholder', person: e, size: '-av-normal' %>
+              </div>
+            <% end %>
           </div>
           <div>
             <h2><%= link_to e.name, investigator_path(e.slug_or_id) %></h2>
