--- a/app/views/investigators/_net_list.html.erb
+++ b/app/views/investigators/_net_list.html.erb
@@ -4,11 +4,16 @@
       <div class="column small-12 medium-6">
         <div class="c-card -person<% !browser.device.mobile? ? ' -pad-bigger -no-shadow' : '' %>">
           <div class="icons">
-            <div class="c-avatar -ph<% !browser.device.mobile? ? ' -medium -mg-bt' : ' -normal' %>"
-                 style="<% if e.user.present? %>
-                          background-image: url(<%= e.user.avatar_url(:thumb) %>)
-                        <% end %>">
-            </div>
+            <% if e.user.present? && e.user.avatar.present? %>
+               <div class="c-avatar -ph -no-bg<% !browser.device.mobile? ? ' -medium -mg-bt' : ' -normal' %>"
+                   style="background-image: url(<%= e.user.avatar_url(:thumb) %>)">
+              </div>
+            <% else %>
+               <div class="c-avatar -ph<% !browser.device.mobile? ? ' -medium -mg-bt' : ' -normal' %>">
+                <%= render 'shared/placeholder', person: e, size: '-av-normal' %>
+              </div>
+            <% end %>
+
             <% if e.user.present? && is_owner?(@user, current_user) && browser.device.mobile? %>
               <button class="c-btn -icon -secondary js-btn-toggle-message" data-user="<%= e.user.id %>-i" type="button" name="button">
                 <svg class="c-icon -normal -inverse"><use xlink:href="#icon-message"></use></svg>
