--- a/app/views/users/_net_list.html.erb
+++ b/app/views/users/_net_list.html.erb
@@ -4,11 +4,15 @@
       <div class="column small-12 medium-6">
         <div class="c-card -person<% !browser.device.mobile? ? ' -pad-bigger -no-shadow' : '' %>">
           <div class="icons">
-            <div class="c-avatar -ph<% !browser.device.mobile? ? ' -medium -mg-bt' : ' -normal' %>"
-                 style="<% if e.present? %>
-                          background-image: url(<%= e.avatar_url(:thumb) %>)
-                        <% end %>">
-            </div>
+            <% if e.avatar.present? %>
+               <div class="c-avatar -ph -no-bg<% !browser.device.mobile? ? ' -medium -mg-bt' : ' -normal' %>"
+                   style="background-image: url(<%= e.avatar_url(:thumb) %>)">
+              </div>
+            <% else %>
+               <div class="c-avatar -ph -secondary<% !browser.device.mobile? ? ' -medium -mg-bt' : ' -normal' %>">
+                <%= render 'shared/placeholder', person: e, size: '-av-normal' %>
+              </div>
+            <% end %>
 
             <% if e.present? && is_owner?(@user, current_user) && browser.device.mobile? %>
               <button class="c-btn -icon -secondary js-btn-toggle-message" data-user="<%= e.id %>-u" type="button" name="button">
